--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ section {
   width: 100%;
 }
 
+button {
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
   section {
     padding: 0px 32px;
