--- a/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
+++ b/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
@@ -60,7 +60,7 @@
   align-self: self-end;
   color: #fff;
   letter-spacing: 0.04em;
-
+  outline: none;
   font-size: 14px;
   font-weight: 700;
   background-color: #fc842d;
