--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -11,10 +11,10 @@
 }
 
 .Modal {
-
   position: relative;
   max-width: 670px;
   max-height: 570px;
+
   padding: 64px;
   background-color: white;
   border-radius: 8px;
@@ -42,10 +42,15 @@
   color: #fff;
   letter-spacing: 0.04em;
   margin: 40px auto 0 auto;
-  font-size: 14px;  
+  font-size: 14px;
   font-weight: 700;
   background-color: #fc842d;
   border-radius: 30px;
   border: none;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
+}
+
+.notAllowedProductsList {
+  max-height: 120px;
+  overflow: scroll;
 }
