--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.css
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.css
@@ -34,3 +34,24 @@
   background-color: #fc842d;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
 }
+.block {
+  position: relative;
+}
+.searchedListWrapper {
+  left: 250px;
+  position: absolute;
+  top: -65px;
+  background-color: #d5d5d5;
+}
+
+.searchedProductsList {
+  max-height: 300px;
+  overflow: scroll;
+  border: 1px solid #000;
+  width: max-content;
+  padding: 10px 20px;
+}
+.searchedProductsList li:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
