--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -4,16 +4,14 @@
   background-color: #f0f1f3;
   margin-top: -363px;
   position: relative;
-
+  height: 100vh;
   z-index: -10;
 }
 
 .notAllowedProductsList {
-  display: flex;
-  flex-direction: column;
-  height: 200px;
-  gap: 20px;
-  overflow-y: scroll;
+  display: block;
+  max-height: 200px;
+  overflow: scroll;
 }
 
 .title {
