--- a/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
+++ b/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
@@ -67,4 +67,9 @@
   border-radius: 30px;
   border: none;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
+  transition: all 150ms linear;
+}
+
+.btnSubmitFrom:hover {
+  background-color: #ea6e16;
 }
