--- a/src/components/DiaryProductsListItem/DiaryProductsListItem.module.css
+++ b/src/components/DiaryProductsListItem/DiaryProductsListItem.module.css
@@ -1,4 +1,5 @@
 .item {
+  display: flex;
 }
 .item span {
   height: 40px;
@@ -24,4 +25,8 @@
   transform: rotate(45deg);
   font-size: 35px;
   color: #9b9faa;
+}
+
+.btn:hover {
+  color: #797b80;
 }
