--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -15,26 +15,31 @@
     column-gap: 10px;
   }
   .logoText {
-      display: block;
-    }
+    display: block;
+  }
 
-    .logoText span {
-      color: #FC842D;
-    }
- }
+  .logoText span {
+    color: #fc842d;
+  }
+}
 
- @media screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .logoWrapper {
     font-size: 24px;
     align-items: flex-end;
   }
-    .logo {
-      width: 70px;
-      height: 66px;
-    }
-        .logoText {
-          margin-left: -30px;
-          padding-right: 20px;
-          border-right:2px solid #E0E0E0;
-        }
- }
+  .logo {
+    width: 70px;
+    height: 66px;
+  }
+  .logoText {
+    margin-left: -30px;
+    padding-right: 20px;
+    border-right: 2px solid #e0e0e0;
+  }
+  .logoWrapper a {
+    display: flex;
+    column-gap: 5px;
+    align-items: flex-end;
+  }
+}
