--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -12,14 +12,13 @@
 
 .Modal {
   position: relative;
-  max-width: 670px;
-  max-height: 570px;
-
-  padding: 64px;
+  width: 670px;
+  height: 570px;
   background-color: white;
   border-radius: 8px;
 }
 .contentWrapper {
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,9 +47,63 @@
   border-radius: 30px;
   border: none;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
+  transition: all 150ms linear;
+}
+
+.btnSubmitFrom:hover {
+  background-color: #ea6e16;
 }
 
 .notAllowedProductsList {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
   max-height: 120px;
   overflow: scroll;
+}
+.notAllowedProductsList li {
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.04em;
+
+  color: #9b9faa;
+}
+.title {
+  text-align: center;
+  max-width: 508px;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 140%;
+  margin-bottom: 20px;
+}
+.kcalRecomended {
+  letter-spacing: 0.04em;
+  font-weight: 700;
+  font-size: 48px;
+  color: #264061;
+  margin-bottom: 32px;
+}
+.kcalRecomended span {
+  font-size: 14px;
+  text-transform: lowercase;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: #e0e0e0;
+}
+.titleNotEat {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  justify-self: flex-start;
+  letter-spacing: 0.04em;
+  color: #212121;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.contentWrapper {
+  padding: 0px 80px 0px 80px;
 }
