--- a/src/pages/DiaryPage/DiaryPage.module.css
+++ b/src/pages/DiaryPage/DiaryPage.module.css
@@ -1,5 +1,6 @@
 .flexContainer {
   display: flex;
+  flex-direction: column;
 }
 .dateWrapper {
   display: flex;
@@ -28,4 +29,41 @@
 
 .datePickerWrapper input {
   display: none;
+}
+
+.addBtn {
+  display: block;
+  font-size: 30px;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+  background-color: #fc842d;
+  box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
+  transition: all 150ms linear;
+}
+.addBtn:hover {
+  transform: rotate(90deg);
+  background-color: #ea6e16;
+}
+
+.modalAdd {
+  display: grid;
+  place-items: center;
+  background-color: rgb(160, 160, 160);
+  position: fixed;
+  width: 100vw;
+  height: 390px;
+
+  left: 0;
+  z-index: 10;
+}
+.iconCross {
+  cursor: pointer;
+  font-size: 25px;
+  transform: rotate(45deg);
+  color: white;
 }
