--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -9,30 +9,30 @@
   height: 100vh;
   z-index: -10;
   font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 0.04em;
-  
-    color: #9B9FAA;
+  line-height: 17px;
+  letter-spacing: 0.04em;
+
+  color: #9b9faa;
 }
 
 .notAllowedProductsList {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
-  max-height: 200px;
-  overflow: hidden;
+  max-height: 180px;
+  overflow: scroll;
 }
 
 .title {
   margin-bottom: 20px;
   font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 0.04em;
-  
-    color: #212121;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.04em;
+
+  color: #212121;
 }
-.topWrapper{
+.topWrapper {
   margin-bottom: 40px;
 }
 
@@ -40,8 +40,8 @@
   width: 6px;
 }
 
-::-webkit-scrollbar-track{
-  background-color: #F0F1F3;
+::-webkit-scrollbar-track {
+  background-color: #f0f1f3;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #264061;
