--- a/src/components/DiaryProductsList/DiaryProductsList.module.css
+++ b/src/components/DiaryProductsList/DiaryProductsList.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
-  height: 280px;
+  max-height: 280px;
   overflow-y: scroll;
   /* box-shadow: inset 0px -15px 10px -15px rgb(152, 152, 152); */
   background: linear-gradient(
@@ -12,4 +12,5 @@
   );
   /* width: max-content; */
   padding-right: 20px;
+  margin-bottom: 20px;
 }
