--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,10 @@
 .header {
   padding: 20px 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  
 }
-
 
 @media screen and (min-width: 1280px) {
   .header {
