--- a/src/components/ModalAdd/ModalAdd.module.css
+++ b/src/components/ModalAdd/ModalAdd.module.css
@@ -60,7 +60,7 @@
   font-weight: 700;
   color: #ffffff;
   margin: 0 auto;
-  margin: 30px auto;
+  margin: 60px auto;
 }
 
 .searchedProductsList {
@@ -69,4 +69,7 @@
 }
 .positionWrapper {
   margin-bottom: 30px;
+}
+.labelName {
+  margin-bottom: 32px;
 }
