--- a/src/pages/DiaryPage/DiaryPage.module.css
+++ b/src/pages/DiaryPage/DiaryPage.module.css
@@ -9,8 +9,14 @@
   margin-bottom: 60px;
 }
 .date {
-  font-size: 34px;
+  font-size: 18px;
   font-weight: 700;
+}
+
+@media screen and (min-width: 768px) {
+  .date {
+    font-size: 34px;
+  }
 }
 
 .datePickerWrapper {
