--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -1,10 +1,6 @@
 .container {
-  /* padding: 363px 95px 20px 94px; */
-  /* width: 520px; */
-
   padding: 40px 20px;
   background-color: #f0f1f3;
-  /* margin-top: -363px; */
   position: relative;
   height: 100vh;
   z-index: -10;
@@ -14,6 +10,26 @@
 
   color: #9b9faa;
 }
+@media screen and  (min-width: 600px) and (max-width: 1280px)  {
+.container {
+   display: flex;
+   justify-content: space-between;
+  }
+  .bottomWrapper {
+    max-width: 300px;
+    margin-left: auto;
+  }
+
+}
+
+@media screen and (min-width: 1280px){
+  .container {
+    margin-top: -335px;
+    padding-top: 335px;
+  }
+  
+}
+
 
 .notAllowedProductsList {
   display: flex;
