--- a/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
+++ b/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   row-gap: 60px;
 }
+
 .calculatorForm {
   width: 100%;
   display: grid;
@@ -17,6 +18,12 @@
   grid-template-columns: 240px 240px;
   grid-template-rows: 40px 40px 40px;
   font-size: 14px;
+}
+@media screen and (max-width: 500px) {
+  .calculatorForm {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .calculatorForm label {
   display: flex;
