--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -7,7 +7,7 @@
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.04em;
-
+  min-width: 520px;
   color: #9b9faa;
 }
 @media screen and  (min-width: 600px) and (max-width: 1280px)  {
