--- a/src/pages/CalculatorPage/CalculatorPage.module.css
+++ b/src/pages/CalculatorPage/CalculatorPage.module.css
@@ -2,3 +2,11 @@
   display: flex;
   height: 100vh;
 }
+
+
+@media screen and (max-width: 1280px) {
+  .flexContainer {
+
+      flex-direction: column;
+  }
+}
