--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -7,8 +7,13 @@
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.04em;
-  min-width: 520px;
+ 
   color: #9b9faa;
+}
+@media screen and (max-width: 767px) {
+  .container{
+    margin-top: 86px;
+  }
 }
 @media screen and  (min-width: 600px) and (max-width: 1280px)  {
 .container {
@@ -26,6 +31,7 @@
   .container {
     margin-top: -335px;
     padding-top: 335px;
+    min-width: 520px;
   }
   
 }
