--- a/src/pages/DiaryPage/DiaryPage.module.css
+++ b/src/pages/DiaryPage/DiaryPage.module.css
@@ -21,6 +21,9 @@
       flex-direction: row;
       justify-content: space-between;
   }
+    .leftWrapper {
+      margin-right: 202px;
+    }
 }
 
 .datePickerWrapper {
@@ -59,3 +62,4 @@
   transform: rotate(90deg);
   background-color: #ea6e16;
 }
+
