--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -19,6 +19,7 @@
 .container {
    display: flex;
    justify-content: space-between;
+   margin-top: 86px;
   }
   .bottomWrapper {
     max-width: 300px;
