--- a/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
+++ b/src/components/CalculatorСalorieForm/CalculatorСalorieForm.module.css
@@ -24,6 +24,10 @@
     display: flex;
     flex-direction: column;
   }
+  .title {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
 }
 .calculatorForm label {
   display: flex;
