--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.css
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.css
@@ -52,11 +52,12 @@
   position: absolute;
   top: -65px;
   background-color: #d5d5d5;
+  z-index: 20;
 }
 
 .searchedProductsList {
   max-height: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
   border: 1px solid #000;
   width: max-content;
   padding: 10px 20px;
